# blackjack-player

./: .gitignore  CMakeLists.txt  LICENSE  README.md  blackjack.sh
shared/: deffinitions.hpp  shim.cpp  shim.hpp
